--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,47 @@
-node_modules
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Next.js build output
+/.next
+/out
+
+# Next.js static files
+/static
+
+# TailwindCSS JIT mode
+/.tailwind
+
+# Production environment variables
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Ignore generated code coverage files
+/coverage
+/nyc_output
+
+# Ignore lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
